build: fix some incorrect include paths
make distcheck was failing because hardwired relative paths
were used for -I in Makefile.am, when htey should have been
relative to $(top_srcdir).

--- a/libdiod/Makefile.am
+++ b/libdiod/Makefile.am
@@ -1,7 +1,9 @@
 AM_CFLAGS = @GCCWARN@
 
 AM_CPPFLAGS = \
-	-I../libnpfs -I../libnpclient -I../liblsd
+	-I$(top_srcdir)/libnpfs \
+	-I$(top_srcdir)/libnpclient \
+	-I$(top_srcdir)/liblsd
 
 noinst_LIBRARIES = libdiod.a
 
